<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.mariabeas.keepsafe.MainActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInicio"
        android:id="@+id/btnInicio"
        android:layout_below="@+id/logo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:hint="@string/edtPassword"
        android:layout_below="@+id/edtUser"
        android:layout_alignLeft="@+id/edtUser"
        android:layout_alignStart="@+id/edtUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtUser"
        android:ems="10"
        android:id="@+id/edtUser"
        android:layout_below="@+id/btnInicio"
        android:layout_alignRight="@+id/btnRegistro"
        android:layout_alignEnd="@+id/btnRegistro"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box"
        android:id="@+id/checkBox"
        android:layout_below="@+id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistro"
        android:id="@+id/btnRegistro"
        android:layout_above="@+id/edtUser"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRecuperar"
        android:id="@+id/btnRecuperar"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/email"
        android:src="@drawable/ic_email_black_24dp"
        android:layout_above="@+id/edtPassword"
        android:layout_toLeftOf="@+id/edtUser"
        android:layout_toStartOf="@+id/edtUser" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/loc"
        android:src="@drawable/ic_lock_black_24dp"
        android:layout_alignBottom="@+id/edtPassword"
        android:layout_toLeftOf="@+id/edtPassword"
        android:layout_toStartOf="@+id/edtPassword" />



</RelativeLayout>
