<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:foregroundGravity="right"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/edtContacto"
        android:ems="10"
        android:id="@+id/edtContacto"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSMS"
        android:hint="@string/edtSMS"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_weight="0.21" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviarSMS"
        android:id="@+id/btnEnviarSMS"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp" />


</LinearLayout>