<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_datos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_below="@+id/menu_datos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/avatarGuardado"
        android:src="@drawable/avatar"
        android:layout_alignTop="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/face"
        android:src="@drawable/ic_face_black_24dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/edtNombreAgenda"
        android:layout_toStartOf="@+id/edtNombreAgenda" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/email"
        android:src="@drawable/ic_email_black_24dp"
        android:layout_alignBottom="@+id/edtUser"
        android:layout_alignLeft="@+id/face"
        android:layout_alignStart="@+id/face" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtUser"
        android:ems="10"
        android:id="@+id/edtUser"
        android:layout_alignLeft="@+id/edtNombreAgenda"
        android:layout_alignStart="@+id/edtNombreAgenda"
        android:layout_below="@+id/avatarGuardado"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtNombreAgenda"
        android:hint="Nombre"
        android:layout_below="@+id/edtUser"
        android:layout_alignLeft="@+id/edtApellido"
        android:layout_alignStart="@+id/edtApellido" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtApellido"
        android:ems="10"
        android:id="@+id/edtApellido"
        android:layout_below="@+id/edtNombreAgenda"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edtFecha"
        android:hint="@string/edtFecha"
        android:layout_below="@+id/edtApellido"
        android:layout_alignLeft="@+id/edtApellido"
        android:layout_alignStart="@+id/edtApellido" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtSexo"
        android:ems="10"
        android:id="@+id/edtSexo"
        android:layout_below="@+id/edtFecha"
        android:layout_alignLeft="@+id/edtFecha"
        android:layout_alignStart="@+id/edtFecha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edtSangre"
        android:ems="10"
        android:id="@+id/edtSangre"
        android:layout_below="@+id/edtSexo"
        android:layout_alignLeft="@+id/edtSexo"
        android:layout_alignStart="@+id/edtSexo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtNum"
        android:hint="@string/edtNum"
        android:layout_below="@+id/edtSangre"
        android:layout_alignLeft="@+id/edtSangre"
        android:layout_alignStart="@+id/edtSangre" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_menu_camera"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:layout_below="@+id/logo"
        android:layout_toLeftOf="@+id/logo"
        android:layout_toStartOf="@+id/logo"
        app:backgroundTint="#FF4CAF50"
        app:rippleColor="#FFF"
       />
</RelativeLayout>


