<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_datos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:foregroundGravity="right"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="right"
        android:layout_below="@+id/menu_datos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/miMapa"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentLeft="true"
        android:apiKey="AIzaSyBPUFWVb-oISEs0NXd3WRXbVI5AkaY59wY"
        android:layout_alignParentStart="true"></com.google.android.gms.maps.MapView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvUbicacion"
        android:id="@+id/tvUbi"
        android:layout_below="@+id/miMapa"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvDireccion"
        android:id="@+id/tvDireccion"
        android:layout_below="@+id/tvUbi"
        android:layout_alignLeft="@+id/tvUbi"
        android:layout_alignStart="@+id/tvUbi"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnActualizar"
        android:id="@+id/btnActualizar"
        android:layout_below="@+id/tvDireccion"
        android:layout_centerHorizontal="true" />

</RelativeLayout>